--- a/public/index.html
+++ b/public/index.html
@@ -24,8 +24,25 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
+    <script
+      type="text/javascript"
+      src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"
+    ></script>
+    <link
+      rel="stylesheet"
+      type="text/css"
+      href="https://d1iq3ppa2tzmm4.cloudfront.net/basf-countdown-clock-source.css"
+    />
+    <script>
+      $(document).ready(function () {
+        $("#countdown-clock-widget-618815").load(
+          "https://d1iq3ppa2tzmm4.cloudfront.net/basf-countdown-clock-source.html"
+        );
+      });
+    </script>
     <title>React App</title>
   </head>
+
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
     <div id="root"></div>
